--- a/Lab7/index.html
+++ b/Lab7/index.html
@@ -3,15 +3,26 @@
 <head>
     <h1>EECS 348 Lab Seven</h1>
 </head>
+<style>
+    #pic {
+        width:100%;
+        position: absolute;
+        bottom:0;
+        display: block;
+        float: right;
+    }
+</style>
 
 <body>
     Hello Everyone! This is the index of our Lab 7<br>
-
     Please follow these links to visit other practices. Try to make it more beautiful 🥳<br>
     <a href="practice1.html">Practice1</a> <br>
     <a href="practice2.html">Practice2</a> <br>
     <a href="practice3.html">Practice3</a> <br>
     <a href="practice4.html">Practice4</a> <br>
+    <div id="pic">
+        <img id="picture" , src="pic2.jpg" height="300" width="300"><br><br>
+    </div>
 </body>
 
 </html>
