--- a/Lab7/practice1.html
+++ b/Lab7/practice1.html
@@ -6,11 +6,11 @@
 
 <body>
     <link href="style.css" rel="stylesheet" type="text/css" />
-    <a href="https://people.eecs.ku.edu/~d293l463/">Goes back to my index</a> <br>
+    <a href="https://people.eecs.ku.edu/~d293l463/">Goes back to my index</a> <br> <br>
     Tommy Lam<br>
     Contact info: (949 - 771 - 6535)<br>
                   tommy.lam59@ku.edu<br>
-    <img id="picture" , src="pic.jpg" height="300" width="300"><br>
+    <img id="picture" , src="pic.jpg" height="300" width="300"><br><br>
 
     <iframe width="560" height="315" src="https://www.youtube.com/embed/XqZsoesa55w?si=b34s2OWtlPxh9bRK" title="YouTube video player" 
         frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
