--- a/Lab7/practice4.html
+++ b/Lab7/practice4.html
@@ -5,6 +5,7 @@
 </head>
 
 <body>
+    <a href="https://people.eecs.ku.edu/~d293l463/">Goes back to my index</a> <br> <br>
     <form action="practice4.php" method="post">
         Size of the multiplication table: <input type="text" name="size"><br>
         <input type="submit">
