--- a/Lab7/practice1.html
+++ b/Lab7/practice1.html
@@ -1,16 +1,32 @@
+<!DOCTYPE html>
 <html>
-
 <head>
+    <meta charset="utf-8">
+    <title>Tommy Lam Profile</title>
     <h1>EECS 348 Lab Seven Practice One</h1>
 </head>
+<style>
+    body {
+        font-family: Arial, sans-serif;
+        margin: 0;
+        padding: 0;
+        background-color: #f5f5f5;
+    }
 
+    #profile-photo {
+        width: 120px;
+        height: 120px;
+        border-radius: 50%;   
+        object-fit: cover;  
+        margin-right: 20px;   
+    }
+</style>
 <body>
-    <link href="style.css" rel="stylesheet" type="text/css" />
-    <a href="https://people.eecs.ku.edu/~d293l463/">Goes back to my index</a> <br> <br>
-    Tommy Lam<br>
-    Contact info: (949 - 771 - 6535)<br>
-                  tommy.lam59@ku.edu<br>
-    <img id="picture" , src="pic.jpg" height="300" width="300"><br><br>
+    <a href="https://people.eecs.ku.edu/~d293l463/">Goes back to my index</a>
+    <p><strong>Tommy Lam</strong></p>
+    <p><strong>Phone: </strong>(949 - 771 - 6535)</p>
+    <p><strong>Email: </strong>tommy.lam59@ku.edu</p>
+    <img id="profile-photo" , src="pic.jpg"><br><br>
 
     <iframe width="560" height="315" src="https://www.youtube.com/embed/XqZsoesa55w?si=b34s2OWtlPxh9bRK" title="YouTube video player" 
         frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
