--- a/Lab7/practice2.html
+++ b/Lab7/practice2.html
@@ -1,24 +1,32 @@
+<!DOCTYPE html>
 <html>
-
 <head>
+    <meta charset="utf-8">
+    <title>Color and Border Width Control</title>
     <h1>EECS 348 Lab Seven Practice Two</h1>
 </head>
 
 
 <style>
+    body {
+        font-family: Arial, sans-serif;
+        margin: 0;
+        padding: 0;
+        background-color: #f0f0f0;
+    }
+
     #paragraph {
-        border-style: solid;
-        border-width: 5px;
+        font-size: 18px;
+        padding: 10px;
+        border: 2px solid black;
+        border-radius: 5px;
     }
 </style>
 
 <body>
     <a href="https://people.eecs.ku.edu/~d293l463/">Goes back to my index</a> <br> <br>
     <div id="paragraph">
-
-
         Hello, welcome to the fun color changing magic! Please fill in the blank for the magic to happen.
-
     </div>
 
     <script>
@@ -37,7 +45,7 @@
             tag.style.backgroundColor = `rgb(${bg_R},${bg_G},${bg_B})`;
         }
     </script>
-    Border R(0-255): <input type="text" id="border_R" value=""> <br>
+    <br>Border R(0-255): <input type="text" id="border_R" value=""> <br>
     Border G(0-255): <input type="text" id="border_G" value=""> <br>
     Border B(0-255): <input type="text" id="border_B" value=""> <br>
     Border Width: <input type="text" id="border_width" value=""> <br>
