--- a/Lab7/practice1.html
+++ b/Lab7/practice1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>Tommy Lam Profile</title>
-    <h1>EECS 348 Lab Seven Practice One</h1>
+    <h1>Profile</h1>
 </head>
 <style>
     body {
@@ -31,7 +31,5 @@
     <iframe width="560" height="315" src="https://www.youtube.com/embed/XqZsoesa55w?si=b34s2OWtlPxh9bRK" title="YouTube video player" 
         frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
         allowfullscreen></iframe>
-
 </body>
-
 </html>
