--- a/Lab7/practice2.html
+++ b/Lab7/practice2.html
@@ -3,10 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>Color and Border Width Control</title>
-    <h1>EECS 348 Lab Seven Practice Two</h1>
 </head>
-
-
 <style>
     body {
         font-family: Arial, sans-serif;
@@ -24,6 +21,7 @@
 </style>
 
 <body>
+    <h2>Color and Border Width Control</h2>
     <a href="https://people.eecs.ku.edu/~d293l463/">Goes back to my index</a> <br> <br>
     <div id="paragraph">
         Hello, welcome to the fun color changing magic! Please fill in the blank for the magic to happen.
