--- a/Lab7/practice3.html
+++ b/Lab7/practice3.html
@@ -1,11 +1,25 @@
+<!DOCTYPE html>
 <html>
-
 <head>
-    <h1>EECS 348 Lab Seven Practice Three</h1>
+    <meta charset="utf-8">
+    <title>Password Verification</title>
 </head>
-
+<style>
+    body {
+        font-family: Arial, sans-serif;
+        background-color: #f4f4f4;
+        margin: 0;
+        padding: 0;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        height: 45vh;
+    }
+</style>
 <body>
-    <a href="https://people.eecs.ku.edu/~d293l463/">Goes back to my index</a> <br> <br>
+    <h2>Password Verification</h2>
+    <a href="https://people.eecs.ku.edu/~d293l463/">Goes back to my index</a> <br>
     First Password: <input type="text" id="pass1" value=""> <br>
     Second Password: <input type="text" id="pass2" value=""> <br>
 
