--- a/Lab9 (EC Lab #2)/index.html
+++ b/Lab9 (EC Lab #2)/index.html
@@ -51,8 +51,8 @@
     <h1>EECS 348 EC Lab #2</h1>
     <p>This is the index for EC Lab 2. Please follow these links to continue</p>
     <div class="practice-links">
-        <a href="practice5.html">Practice1</a>
-        <a href="practice6.html">Practice2</a>
+        <a href="practice5.html">Github Link</a>
+        <a href="practice6.html">Docker Link</a>
     </div>
     <div id="pic">
         <img id="picture" , src="pic2.jpg" height="300" width="300"><br><br>
