--- a/Lab9 (EC Lab #2)/practice5.html
+++ b/Lab9 (EC Lab #2)/practice5.html
@@ -2,8 +2,8 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Test1</title>
-    <h1>Test1</h1>
+    <title>GitHub</title>
+    <h1>Github Link</h1>
 </head>
 <style>
     body {
@@ -14,7 +14,8 @@
     }
 </style>
 <body>
-    <a href="https://people.eecs.ku.edu/~d293l463/">Goes back to my index</a>
+    <a href="https://people.eecs.ku.edu/~d293l463/">Goes back to my index</a><br>
+    <a href="https://github.com/tommie08/lam-3087432/tree/main/Lab9%20(EC%20Lab%20%232)">Goes to my github repository</a>
 
 </body>
 
