--- a/Lab9 (EC Lab #2)/practice6.html
+++ b/Lab9 (EC Lab #2)/practice6.html
@@ -2,8 +2,8 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Test2</title>
-    <h1>Test2</h1>
+    <title>Docker</title>
+    <h1>Docker Link</h1>
 </head>
 <style>
     body {
@@ -14,7 +14,8 @@
     }
 </style>
 <body>
-    <a href="https://people.eecs.ku.edu/~d293l463/">Goes back to my index</a>
+    <a href="https://people.eecs.ku.edu/~d293l463/">Goes back to my index</a><br>
+    <a href="https://hub.docker.com/repository/docker/tommyl59/lab9/general">Goes to my Docker repository</a>
 
 </body>
 
